Fixing inconsistencies when evaluating permission in the evaluation tab
Closes #38498

Signed-off-by: Pedro Igor <pigor.craveiro@gmail.com>